docs/src/components/Demo/Demo.css
@import 'docs/src/css/custom-media.css';

@layer components {
  .DemoRoot {
    background-color: rgb(0 0 0 / 2%);
    border: 1px solid var(--gray-c2);
    border-radius: var(--radius-12);
    margin-bottom: var(--space-24);

    --shadow-1:
      0 1px 1px 0 var(--blackA-1), 0 2px 1px -1px var(--blackA-1), 0 1px 3px 0 var(--blackA-1);
    --shadow-2:
      0 1px 1px 0 var(--blackA-1), 0 1px 3px -1px var(--blackA-1), 0 4px 8px -2px var(--blackA-1);
    --shadow-3:
      0 1px 1px 0 var(--blackA-1), 0 2px 6px -1px var(--blackA-1), 0 6px 12px -3px var(--blackA-1),
      0 8px 16px -4px var(--blackA-1);
    --shadow-4:
      0 1px 1px 0 var(--blackA-1), 0 2px 4px -1px var(--blackA-1), 0 4px 8px -2px var(--blackA-1),
      0 12px 32px -6px var(--blackA-3), 0 20px 48px -10px var(--blackA-1);
    --shadow-5:
      0 10px 32px var(--blackA-5), 0 1px 1px var(--blackA-1), 0 4px 6px var(--blackA-2),
      0 1px 1px var(--blackA-2), 0 24px 68px var(--blackA-4);
  }

  .DemoPlaygroundExternalLink {
    position: absolute;
    top: 0.75rem;
    right: 1.125rem;
  }

  .DemoPlayground {
    position: relative;

    background-color: var(--color-content);
    border-top-left-radius: var(--radius-12);
    border-top-right-radius: var(--radius-12);

    /* Scroll */
    overflow: auto hidden;
    overscroll-behavior-x: contain;
    scrollbar-width: thin;

    /* Scroll containers may be focusable */
    &:focus-visible {
      outline: 2px solid var(--gray-t2);
      outline-offset: -1px;
      z-index: 1;
    }
  }

  /* A separate element for the padding to work when there is horizontal scroll */
  .DemoPlaygroundInner {
    padding: 2rem 1.5rem;
    min-height: 8rem;

    /* Make sure contents aren't squashed smaller than their natural width */
    min-width: fit-content;

    /* Center the contents vertically */
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .DemoToolbar {
    font-size: var(--font-size-13);
    line-height: 1.25rem;
    white-space: nowrap;
    color: var(--gray-t2);
    background-clip: padding-box;
    border-bottom: 1px solid var(--gray-c2);
    display: flex;
    align-items: center;
    gap: 2rem;
    height: 2.25rem;
    padding: 0;
    padding-inline-start: 0.75rem;
    -webkit-user-select: none;
    user-select: none;

    /* Scroll */
    overflow: auto hidden;
    overscroll-behavior-x: contain;
    scrollbar-width: none;

    &::-webkit-scrollbar {
      display: none;
    }

    /* Scroll containers may be focusable */
    &:focus-visible {
      position: relative;
      outline: 2px solid var(--gray-t2);
      outline-offset: -1px;
      z-index: 1;
    }
  }

  .DemoToolbarActions {
    position: relative;
    /* Apply sticky only on wider viewports to avoid actions taking up most of it */
    @media (min-width: 48rem) {
      position: sticky;
      padding-left: 1rem;
    }
    right: 0;
    display: flex;
    align-items: center;
    margin-left: auto;
    padding-right: 0.5rem;
    background-color: var(--gray-s2);
    height: 100%;
    gap: 0.25rem;

    &::before {
      content: '';
      position: absolute;
      top: 0;
      left: -24px;
      width: 24px;
      height: 100%;
      background: linear-gradient(to right, transparent, var(--gray-s2));
      pointer-events: none;
    }
  }

  .DemoFilename {
    font-family: var(--font-mono);
    color: var(--color-foreground);
    font-weight: bold;
    user-select: text;
    border-radius: var(--radius-4);

    &:hover {
      text-decoration: underline;
    }

    &:focus-visible {
      outline: 2px solid var(--gray-t2);
    }
  }

  .DemoTabsList {
    display: flex;
    gap: 2px;
    margin-inline-start: -0.5rem;
  }

  .DemoTab {
    font-family: var(--font-mono);
    position: relative;
    z-index: 0;
    outline: 0;
    height: 1.75rem;
    padding-inline: 0.5rem;
    border-radius: var(--radius-8);
    display: inline-flex;
    align-items: center;
    justify-content: center;
    line-height: 1;

    @media (hover: hover) {
      &:hover {
        background-color: var(--gray-c2);
      }
    }

    &[data-active] {
      color: var(--color-foreground);
      font-weight: var(--font-weight-700);
      background-color: white;

      @media (prefers-color-scheme: light) {
        box-shadow:
          0 0 1px var(--blackA-4),
          0 0.5px 1px var(--blackA-3),
          0 1px 3px var(--blackA-1),
          0 2px 4px -1px var(--blackA-1),
          0 4px 12px -2px var(--blackA-1),
          0 4px 16px -4px var(--blackA-1);
      }

      @media (prefers-color-scheme: dark) {
        background-color: var(--gray-c2);
      }
    }

    &:focus-visible {
      outline: 2px solid var(--gray-t2);
      outline-offset: -1px;
    }
  }

  .DemoCodeBlockCollapsible {
    position: relative;
    display: flex;
    flex-direction: column;

    &:not([data-open], [data-compact]) {
      .DemoCollapseButton {
        position: absolute;
        left: 50%;
        bottom: 0.75rem;
        transform: translateX(-50%);
      }
    }

    &[data-open] {
      .DemoCollapseButton {
        position: sticky;
        bottom: 0.75rem;
        align-self: center;
        margin-top: -2.25rem;
        margin-bottom: 0.75rem;
      }
    }

    &[data-compact]:not([data-open]) {
      .DemoCollapseButton {
        align-self: center;
        margin-block: 0.5rem;
      }
    }
  }

  .DemoCodeBlockRoot {
    display: flex;
    flex-direction: column;
    position: relative;
    outline: 0;

    &[data-closed] {
      &::before {
        content: '';
        position: absolute;
        z-index: 1;
        pointer-events: none;
        height: 7.5rem;
        bottom: 0;
        left: 0;
        right: 0;
        background: linear-gradient(to bottom, rgb(255 255 255 / 0), rgb(255 255 255 / 60%));
      }

      @media (prefers-color-scheme: dark) {
        &::before {
          background: linear-gradient(to bottom, rgb(0 0 0 / 0), rgb(0 0 0 / 60%));
        }
      }
    }
  }

  .DemoCodeBlockViewport {
    /* Prevent Chrome/Safari page navigation gestures when scrolling horizontally */
    overscroll-behavior-x: contain;

    /* Max height for code blocks, if we ever want to recover this (https://github.com/mui/base-ui/pull/1187) */
    /* max-height: clamp(8.75lh + 0.5rem, 80vh, 23.75lh + 0.5rem); */

    &[data-closed] {
      overflow: hidden;
      max-height: calc(8.75lh + 0.5rem); /* Show almost 9 code lines plus top padding */
    }
  }

  .DemoSourceBrowser {
    font-size: 0.8125rem; /* 13px */
    line-height: 1.25rem; /* 20px */
    cursor: text;
    display: flex;

    & pre {
      /* Different fonts may introduce vertical align issues */
      display: flex;
      /* Make sure selection highlight spans full container width in Safari */
      flex-grow: 1;
    }

    & code {
      padding: 0.5rem 0;
    }

    & code .frame {
      display: block;
      padding-left: 0.75rem;
      padding-right: 0.75rem;
    }

    & code .frame[data-lined] {
      display: block;
      white-space: normal;
      padding-left: 0;
      padding-right: 0;
    }

    & code .frame[data-lined] .line {
      display: block;
      white-space: pre;
      padding-left: 0.75rem;
      padding-right: 0.75rem;
    }
  }

  .DemoCollapsibleRoot {
    border-top: 1px solid var(--gray-c2);
  }

  .DemoCollapseButton {
    font-size: var(--font-size-13);
    line-height: 1.25rem;
    font-weight: var(--font-weight-400);
    background-color: white;
    cursor: default;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    color: var(--color-foreground);
    height: 2rem;
    padding-inline: 0.75rem;
    border: 1px solid var(--gray-c2);
    border-radius: var(--radius-pill);
    background-clip: padding-box;
    position: relative;
    white-space: nowrap;
    z-index: 2;
    -webkit-user-select: none;
    user-select: none;

    @media (prefers-color-scheme: dark) {
      background-color: var(--gray-c2);
    }

    &[data-sticky] {
      z-index: 1;
    }

    @media (hover: hover) {
      &:hover {
        background-color: var(--gray-s2);
      }
    }

    &:focus-visible {
      outline: 2px solid var(--gray-t2);
      outline-offset: -1px;
    }
  }
}

